# sockets

./: .gitignore  CMakeLists.txt  README.md  client.cpp  common.h  server.cpp
include/: ClientUnixSocket.h  ServerUnixSocket.h  SocketConnection.h  UnixSocket.h  common.h
src/: ClientUnixSocket.cpp  ServerUnixSocket.cpp  SocketConnection.cpp  UnixSocket.cpp
